<resources>
    <string name="app_name">Aion Cars</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create One</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_first_name">Enter valid first name</string>
    <string name="enter_valid_last_name">Enter valid last name</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="password_doesnt_match">Passwords are not matching</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="error_message">Something went wrong!</string>
    <string name="registration_successful">Registration successful</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="offers">Offers</string>
    <string name="history">History</string>
    <string name="customers">Customers</string>
    <string name="bookings">Bookings</string>
    <string name="groups">Groups</string>
    <string name="track">Track</string>
    <string name="new_booking">New</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="location_rationale">This app needs access to your location to know where you are.</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="gps_not_enabled">GPS not enable, please enable to continue.</string>
    <string name="pick_address">Pickup Address</string>
    <string name="drop_off_address">Drop off address</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="create">Create</string>
    <string name="select_valid_location">Select valid location</string>
    <string name="ok">Ok</string>
    <string name="select_pickup_address">Select pickup address</string>
    <string name="select_drop_off_address">Select drop off address</string>
    <string name="select_date_time"><![CDATA[Select Date & Time]]></string>
    <string name="price_empty">Price is empty</string>
    <string name="booking_created_successfully">Booking created successfully</string>
    <string name="status">Status</string>
    <string name="my_bookings">My bookings</string>
    <string name="create_booking">Create Booking</string>
    <string name="my_profile">My profile</string>
    <string name="my_driver">My Driver</string>
    <string name="call">Call</string>
    <string name="message">Message</string>

    <string-array name="car_types_array">
        <item>Economy Class</item>
        <item>Business Class</item>
        <item>Europe car</item>
        <item>SUV 6 Seaters</item>
        <item>Van 8 Seaters</item>
        <item>Van 11 Seaters</item>
    </string-array>

    <string-array name="payment_types_array">
        <item>Card</item>
        <item>Cash</item>
        <item>Docket</item>
        <item>Account</item>
        <item>Cab Charge</item>
        <item>EFTPOS 5%</item>
        <item>EFTPOS 10%</item>
    </string-array>
</resources>
