<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group>
        <item
                android:id="@+id/nav_status"
                android:title="@string/status"
                app:actionViewClass="android.widget.Switch"
                android:icon="@drawable/ic_exclamation"
                app:showAsAction="always"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_offers"
                android:icon="@drawable/ic_offers"
                android:title="@string/offers"/>
        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
    </group>

</menu>
