<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context="au.com.emerg.taxitowncars.activites.LoginActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:layout_height="250dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_logo"/>

        <TextView
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/value24dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/value36dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value8dp"
                android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/value8dp"
                android:text="@string/forgot_password"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/value8dp"
                android:textAllCaps="false"
                android:padding="@dimen/value16dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/login"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <TextView
                    android:layout_marginTop="@dimen/value8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/value8dp"
                    android:text="@string/don_t_have_an_account"/>

            <TextView
                    android:id="@+id/tv_register"
                    android:layout_marginTop="@dimen/value8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_one"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
