<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@android:color/white"
              android:padding="@dimen/value24dp"
              android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pickup_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_address">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pickup_address"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:clickable="false"
                android:focusable="false"
                android:inputType="textPostalAddress"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_drop_off_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value8dp"
            android:hint="@string/drop_off_address">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_drop_off_address"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:clickable="false"
                android:focusable="false"
                android:inputType="textPostalAddress"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value8dp"
            android:hint="@string/date_time">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date_time"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:clickable="false"
                android:focusable="false"
                android:inputType="datetime"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_car_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value16dp"
            android:background="@drawable/ic_border"
            android:entries="@array/car_types_array"
            android:padding="@dimen/value16dp"/>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value16dp"
            android:background="@drawable/ic_border"
            android:entries="@array/payment_types_array"
            android:padding="@dimen/value16dp"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value8dp"
            android:hint="@string/price">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_notes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value8dp"
            android:hint="@string/notes">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:inputType="text"
                android:minHeight="100dp"
                android:gravity="top"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/value16dp"
            android:padding="@dimen/value16dp"
            android:backgroundTint="@color/colorAccent"
            android:textAllCaps="false"
            android:text="@string/create"/>
</LinearLayout>